<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dateEditTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        app:layout_constraintBottom_toTopOf="@+id/dateEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/editTextBackground"
        android:ems="10"
        android:gravity="center_vertical"
        android:inputType=""
        android:textAppearance="?android:attr/textAppearanceMediumInverse"
        android:textColor="?attr/editTextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateEditTextTitle" />

    <TextView
        android:id="@+id/feelEditTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateEditText" />

    <Spinner
        android:id="@+id/feelSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/feels"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feelEditTextTitle" />

    <TextView
        android:id="@+id/commentEditTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feelSpinner" />

    <EditText
        android:id="@+id/commentEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:hint="@string/comment_hint" />
</LinearLayout>